force-app/main/default/objects/Bus_Invoice_Information__c/Bus_Invoice_Information__c.object-meta.xml
<CustomObject>
    <label>Bus Invoice Information</label>
    <nameField>
        <label>Bus Invoice Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Invoice Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>