force-app/main/default/objects/Bus_Invoice_Information__c/fields/Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Autonumber__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Autonumber</label>
    <type>AutoNumber</type>
</CustomField>