force-app/main/default/objects/Bus_Invoice_Information__c/fields/Dealer_Box_1_Required__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Box_1_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Box 1 Required?</label>
    <type>Checkbox</type>
</CustomField>