force-app/main/default/objects/Bus_Invoice_Information__c/fields/Garaged_Address__c.field-meta.xml
<CustomField>
    <fullName>Garaged_Address__c</fullName>
    <label>Garaged Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>