force-app/main/default/objects/Bus_Invoice_Information__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bus Invoice Information (Invoice Contact)</relationshipLabel>
    <relationshipName>Bus_Invoice_Information</relationshipName>
    <type>Lookup</type>
</CustomField>