force-app/main/default/objects/Bus_Invoice_Information__c/fields/Invoice_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Address__c</fullName>
    <formula>Invoice_Contact__r.MailingStreet+ BR() +

 Invoice_Contact__r.MailingCity + &quot;, &quot; + Invoice_Contact__r.MailingState +&quot; &quot; + Invoice_Contact__r.MailingPostalCode</formula>
    <label>Invoice Contact Address</label>
    <type>Text</type>
</CustomField>