force-app/main/default/objects/Bus_Invoice_Information__c/fields/Invoice_Copy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Copy_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Copy Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Invoice_Information</relationshipName>
    <type>Lookup</type>
</CustomField>