force-app/main/default/objects/Bus_Invoice_Information__c/fields/Invoice_Copy_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Copy_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Copy Required</label>
    <type>Checkbox</type>
</CustomField>