force-app/main/default/objects/Bus_Invoice_Information__c/fields/Leased_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Leased_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leased Fleet</label>
    <type>Checkbox</type>
</CustomField>