force-app/main/default/objects/Bus_Invoice_Information__c/fields/Lessor_Information__c.field-meta.xml
<CustomField>
    <fullName>Lessor_Information__c</fullName>
    <label>Lessor Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>