force-app/main/default/objects/Bus_Invoice_Information__c/fields/Lien_Information__c.field-meta.xml
<CustomField>
    <fullName>Lien_Information__c</fullName>
    <label>Lien Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>