force-app/main/default/objects/Bus_Invoice_Information__c/fields/Liens_on_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Liens_on_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liens on Fleet</label>
    <type>Checkbox</type>
</CustomField>