force-app/main/default/objects/Bus_Invoice_Information__c/fields/MSO_Legal_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>MSO_Legal_Name_Address__c</fullName>
    <label>MSO Legal Name &amp; Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>