force-app/main/default/objects/Bus_Invoice_Information__c/fields/Other_Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Invoice_Notes__c</fullName>
    <label>Other Invoice Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>