force-app/main/default/objects/Bus_Invoice_Information__c/fields/Sold_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Address__c</fullName>
    <label>Sold to Address:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>