force-app/main/default/objects/Bus_Invoice_Information__c/fields/Sold_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Name__c</fullName>
    <description>Name of the Customer to whom the invoice is sent</description>
    <label>Sold To Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>